@@ -1,3 +1,13 @@
+2010-01-04  Chris Fleizach  <cfleizach@apple.com>
+
+        Reviewed by Darin Adler.
+
+        AX: any DIV with an aria role should not be ignored
+        https://bugs.webkit.org/show_bug.cgi?id=33090
+
+        * platform/mac/accessibility/aria-divs-not-ignored-expected.txt: Added.
+        * platform/mac/accessibility/aria-divs-not-ignored.html: Added.
+
 2010-01-04  Nikolas Zimmermann  <nzimmermann@rim.com>
 
         Reviewed by Dirk Schulze.
